--- a/cuppa-groups/package.json
+++ b/cuppa-groups/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.16",
+    "request": "^2.88.0",
     "sinon": "^7.2.6"
   }
 }
