--- a/cuppa-users/package.json
+++ b/cuppa-users/package.json
@@ -10,7 +10,6 @@
     "bcrypt": "^3.0.4",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
-    "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
@@ -18,11 +17,12 @@
     "mongoose": "^5.4.16",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "sinon": "^7.2.6"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^6.0.2"
+    "chai": "^4.2.0",
+    "mocha": "^6.0.2",
+    "sinon": "^7.2.6"
   },
   "scripts": {
     "test": "mocha"
