--- a/cuppa-content/package.json
+++ b/cuppa-content/package.json
@@ -2,8 +2,12 @@
   "name": "cuppa-content",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,5 +19,9 @@
     "helmet": "^3.15.1",
     "mongoose": "^5.4.17",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "tslint": "^5.13.1",
+    "typescript": "^3.3.3333"
   }
 }
