--- a/cuppa-content/tsconfig.json
+++ b/cuppa-content/tsconfig.json
@@ -16,5 +16,9 @@
     },
     "include": [
         "src/**/*"
-    ]
+    ],
+    "typeRoots": [
+        "./src/types",
+        "./node_modules/@types"
+    ],
 }
