--- a/cuppa-content/package.json
+++ b/cuppa-content/package.json
@@ -21,6 +21,11 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
+    "@types/express": "^4.16.1",
+    "@types/helmet": "0.0.42",
+    "@types/node": "^11.10.5",
     "tslint": "^5.13.1",
     "typescript": "^3.3.3333"
   }
