--- a/cuppa/package.json
+++ b/cuppa/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
+    "@ngrx/store": "^7.3.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
