--- a/cuppa-users/package.json
+++ b/cuppa-users/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.4",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
+    "consul": "^0.34.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
