--- a/cuppa-groups/package.json
+++ b/cuppa-groups/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "consul": "^0.34.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "helmet": "^3.15.1",
