--- a/cuppa/package.json
+++ b/cuppa/package.json
@@ -38,6 +38,7 @@
     "@angular/cli": "~7.3.4",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@ngrx/entity": "^7.4.0",
     "@ngrx/schematics": "^7.4.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
