--- a/cuppa/package.json
+++ b/cuppa/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "~7.2.14",
+    "@angular/common": "~7.2.14",
+    "@angular/compiler": "~7.2.14",
+    "@angular/core": "~7.2.14",
+    "@angular/forms": "~7.2.14",
+    "@angular/platform-browser": "~7.2.14",
+    "@angular/platform-browser-dynamic": "~7.2.14",
+    "@angular/router": "~7.2.14",
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
@@ -29,15 +29,15 @@
     "@ngrx/store-devtools": "^7.4.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "~7.3.4",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
+    "@angular/compiler-cli": "~7.2.14",
+    "@angular/language-service": "~7.2.14",
     "@ngrx/entity": "^7.4.0",
     "@ngrx/schematics": "^7.4.0",
     "@types/jasmine": "~2.8.8",
