--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,13 @@ services:
             - 3000:3000
         links:
             - db:mongo
+    groups:
+        build: './cuppa-groups'
+        ports:
+            - 3001:3001
+        links:
+            - db:mongo
+            - users:users
     db:
         image: mongo
         ports:
