--- a/cuppa-users/Dockerfile
+++ b/cuppa-users/Dockerfile
@@ -5,12 +5,13 @@ WORKDIR /usr/src/app
 # wildcard to also copy package-lock
 COPY package*.json ./
 RUN npm install
+RUN npm i -g nodemon
 
 # Now bundle the app's source code inside the Docker image
 # NOTE: only copying package.json previously allows us to take advantage
 # of cached Docker layers
-COPY . .
+# COPY . .
 
 EXPOSE 3000
 
-CMD [ "node", "app" ]
+CMD [ "nodemon", "app" ]
