Add docker volume create --name=mongodata NOTE

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
         ports:
             - 27017:27017
         volumes:
-            # - "./db:/data/db" # MongoDB is not compatible with VirtualBox shared volumes
-            - "mongo:/data/db"
+            # - "./db:/data/db" # MongoDB is not compatible with VirtualBox shared volumes (https://github.com/docker-library/mongo/issues/74)
+            - "mongo:/data/db"  # run `docker volume create --name=mongo` first.
 
 volumes:
     mongo:
