--- a/cuppa-content/package.json
+++ b/cuppa-content/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
-    "prestart": "npm run build",
-    "start": "node .",
+    "buildrun": "tsc && node dist/app",
+    "start": "tsc-watch --onSuccess 'node .'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "helmet": "^3.15.1",
     "mongoose": "^5.4.17",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "tsc-watch": "^2.1.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
